# bonfire-server

./: Cargo.toml  README.md  build.rs  config.json
.github/workflows/: rust.yml
docs/: NOTES.md  SECURITY.md
proto/: secu_score.proto
src/: config.rs  grpc.rs  inference_api.rs  llama.rs  main.rs  management_api.rs
src/api_providers/: github_api.rs  mock_api.rs  mod.rs
src/inference_api_providers/: llamafile.rs  mod.rs
src/management_api_providers/: github_api.rs  mod.rs
static/: ascii_art.txt  config.json  grammar.gbnf
