[package]
name = "bonfire-server"
version = "0.1.0"
edition = "2021"
build = true

[dependencies]
ring = "0.17.8"
tonic = "0.12.2"
prost = "0.13.3"
getset = "0.1.3"
tracing = "0.1.40"
serde_json = "1.0.128"
lazy_static = "1.5.0"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
tokio = { version = "1.40.0", features = ["full"] }

# Feature github
octocrab = { version = "0.41.0", optional = true }

[build-dependencies]
tonic-build = "0.12.2"

[features]
github = ["dep:octocrab"]
